feat(salesorder-core-usecase): implement CreateSalesOrderImpl with test